; ModuleID = '/home/carl/AnghaBench/mpv/test/extr_scale_zimg.c_scale.c'
source_filename = "/home/carl/AnghaBench/mpv/test/extr_scale_zimg.c_scale.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_image = type { i32 }
%struct.mp_zimg_context = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.mp_image*, %struct.mp_image*)* @scale to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @scale(i8* %0, %struct.mp_image* %1, %struct.mp_image* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.mp_image*, align 8
  %6 = alloca %struct.mp_image*, align 8
  %7 = alloca %struct.mp_zimg_context*, align 8
  store i8* %0, i8** %4, align 8
  store %struct.mp_image* %1, %struct.mp_image** %5, align 8
  store %struct.mp_image* %2, %struct.mp_image** %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.mp_zimg_context*
  store %struct.mp_zimg_context* %9, %struct.mp_zimg_context** %7, align 8
  %10 = load %struct.mp_zimg_context*, %struct.mp_zimg_context** %7, align 8
  %11 = load %struct.mp_image*, %struct.mp_image** %5, align 8
  %12 = load %struct.mp_image*, %struct.mp_image** %6, align 8
  %13 = call i32 @mp_zimg_convert(%struct.mp_zimg_context* %10, %struct.mp_image* %11, %struct.mp_image* %12)
  ret i32 %13
}

declare dso_local i32 @mp_zimg_convert(%struct.mp_zimg_context*, %struct.mp_image*, %struct.mp_image*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
